syntax = "proto3";

package io.github.tophatcroat.hlf_contrator.schema;
option go_package = "schema";

import "google/protobuf/timestamp.proto";
import "github.com/mwitkow/go-proto-validators/validator.proto";

import "application.proto";

// Project state
message Project {

    enum State {
        OPEN = 0;
        IN_PROGRESS = 1;
        COMPLETED = 2;
        CANCELED = 3;
    }

    // Composite key is defined by Issuer and Name
    string issuer = 1;
    string name = 2;

    // List of IDs of applications for the project
    repeated string applicationsIds = 3;
    // Identification of the project Assessor, can be the same as Issuer
    string assessor = 4;
    
    google.protobuf.Timestamp open_date = 5;
    google.protobuf.Timestamp start_date = 6;
    google.protobuf.Timestamp end_date = 7;
    
    // Estimated Project value in cents
    uint64 estimated_value = 8;
    State state = 9;
    string description = 10;

    repeated Application applications = 11;
}

// ProjectId identifier part
message ProjectId {
    string issuer = 1;
    string name = 2;
}

// ProjectList list of projects
message ProjectList {
    repeated Project items = 1;
}

// PublishProject transaction payload and event
message PublishProject {
    string name = 2 [(validator.field) = {string_not_empty : true}];
    string assessor = 3;
    google.protobuf.Timestamp start_date = 4 [(validator.field) = {msg_exists : true}];
    google.protobuf.Timestamp end_date = 5 [(validator.field) = {msg_exists : true}];

    uint64 estimated_value = 6 [(validator.field) = {int_gt : 0}];
    string description = 7 [(validator.field) = {string_not_empty : true}];
}
